Switch to prestashop demo site; refactor pages and update tests